This is just to motivate myself to improve a little bit every day :)

Best: 28

20-04-2024
Streak: 28
Learned:
Did:
    -Add menu title strings for en and nl. Move menu title to its own component,
        for now passing the whole parent state

19-04-2024
Streak: 27
Learned:
Did:
    -Add 'festive days' to the app, to display instead of dayOfWeek on special days
    -Make mock-up for MainMenu title -> still needs to be done properly and in its own component

18-04-2024
Streak: 26
Learned:
Did:
    -Make Main Menu View only rely on Main Menu View Model, not Calendar View Model

17-04-2024
Streak: 25
Learned:
Did:
    -Update en and nl strings to only populate the plural forms they use, add NL to Locale lib
    -Add Locales from Azerbaijani .. Danish
    -Add support for all Locales that have their ordinal rules listed at
        https://www.unicode.org/cldr/cldr-aux/charts/36.1/supplemental/language_plural_rules.html
    -Simplify Locales that only return PluralForm.OTHER

16-04-2024
Streak: 24
Learned:
Did:
    -Add ordinal strings as string array (try to find what works within compose multiplatform
        limitations, without relying on expect/actual workarounds)
    -Start implementing my own library for fetching Ordinal rules per locale. I'm stubborn so I'd
        rather do this than rely on Moko for Resource Management, or implement it with expect/actual

15-04-2024
Streak: 23
Learned:
    -Read about localising ordinal numbers with plural strings,
        most likely need to use MessageFormat but need to read more about how it works
        and whether it is available in compose multiplatform
Did:

14-04-2024
Streak: 22
Learned:
Did:
    -Ensure SeasonInfo is populated with correct info,
        using inaccurate calculation of Solstices & Equinoxes
    -Clean up logic for making days tick over at 4am instead of midnight
    -Make CalendarState directly accessible to main menu, change background and title based on
        seasonal information.