@@ -30,6 +30,8 @@
         <item quantity="many" />
         <item quantity="other">ste</item>
     </string-array>
-    <!-- 1=DayName, 2=OrdinalNumber, 3=Season, e.g.: Christmas, 45th day of Winter -->
+    <!-- 1=Number, 2=Ordinal suffix/prefix, e.g.: {1}{st} -->
+    <string name="ordinal_number">%1$d%2$s</string>
+    <!-- 1=DayName, 2=OrdinalNumber, 3=Season, e.g.: {Christmas}, {48th} day of {Winter} -->
     <string name="main_menu_title">%1$s, %2$s dag van de %3$s</string>
 </resources>
