@@ -8,6 +8,7 @@ Learned:
 Did:
     -Add menu title strings for en and nl. Move menu title to its own component,
         for now passing the whole parent state
+    -Add Int to ordinal number String function in resourceComposition. Tidy up MainMenuTitle code
 
 19-04-2024
 Streak: 27
